--- a/src/components/ProfileImg/ProfileImg.module.css
+++ b/src/components/ProfileImg/ProfileImg.module.css
@@ -1,7 +1,14 @@
 .container {
   overflow: hidden;
   border-radius: 50px;
+}
+
+.border_gray {
   border: 2px solid #cecece;
+}
+
+.border_red {
+  border: 2px solid #fc7676;
 }
 
 .img {
