--- a/src/components/modules/Header/Header.module.css
+++ b/src/components/modules/Header/Header.module.css
@@ -1,11 +1,16 @@
 .container {
   height: 80px;
   width: 100%;
-  display: flex;
   border: 1px solid #b7b7b7;
+}
+.inner_container {
+  height: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+  display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 15px;
 }
 
 .logo {
