--- a/src/components/modules/Header/Header.module.css
+++ b/src/components/modules/Header/Header.module.css
@@ -5,7 +5,15 @@
   height: 80px;
   width: 100%;
   border: 1px solid makerLightGray;
+  top: 0;
+  background-color: white;
+  z-index: 1;
 }
+
+.sticky {
+  position: sticky;
+}
+
 .inner_container {
   height: 100%;
   max-width: 1200px;
