--- a/src/components/elements/ProfileImg/ProfileImg.module.css
+++ b/src/components/elements/ProfileImg/ProfileImg.module.css
@@ -3,7 +3,7 @@
 
 .container {
   overflow: hidden;
-  border-radius: 50px;
+  border-radius: 50%;
 }
 
 .border_gray {
@@ -31,6 +31,6 @@
 }
 
 .large {
-  height: 70px;
-  width: 70px;
+  height: 180px;
+  width: 180px;
 }
