--- a/src/components/modules/MyProfile/MyProfile.module.css
+++ b/src/components/modules/MyProfile/MyProfile.module.css
@@ -1,9 +1,9 @@
-@value makerDarkGray from '../../../styles/colors.css';
+@value makerGray from '../../../styles/colors.css';
 
 .container {
   width: 500px;
   height: 600px;
-  border: 1px solid makerDarkGray;
+  border: 1px solid makerGray;
   border-radius: 15px;
   padding: 0 30px;
   display: flex;
@@ -32,7 +32,7 @@
   width: 220px;
   height: 30px;
   border-radius: 10px;
-  border: 1px solid makerDarkGray;
+  border: 1px solid makerGray;
   margin-top: 15px;
   font-size: 18px;
   padding-left: 10px;
@@ -50,5 +50,5 @@
   border-radius: 15px;
   padding: 10px;
   font-size: 18px;
-  border: 1px solid makerDarkGray;
+  border: 1px solid makerGray;
 }
