--- a/src/components/modules/FriendList/FriendList.module.css
+++ b/src/components/modules/FriendList/FriendList.module.css
@@ -9,6 +9,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: white;
 }
 
 .searchInput {
@@ -40,4 +41,10 @@
 
 .list li:hover {
   box-shadow: 4px 3px 11px -5px transBlack75;
+}
+
+@media only screen and (max-width: 1230px) {
+  .container {
+    display: none;
+  }
 }
