--- a/src/components/modules/Header/Header.module.css
+++ b/src/components/modules/Header/Header.module.css
@@ -33,6 +33,7 @@
   display: flex;
   align-items: center;
   cursor: pointer;
+  position: relative;
 }
 
 .name {
@@ -44,6 +45,6 @@
 
 .nav_container {
   position: absolute;
-  top: 65px;
-  right: 130px;
+  top: 45px;
+  right: 0px;
 }
