--- a/src/pages/user/User.module.css
+++ b/src/pages/user/User.module.css
@@ -15,3 +15,13 @@
 .posts {
   margin-left: 10px;
 }
+
+@media only screen and (max-width: 1130px) {
+  .content_wrapper {
+    flex-direction: column;
+    align-items: center;
+  }
+  .posts {
+    margin-top: 50px;
+  }
+}
