--- a/src/components/modules/modals/UploadPost/UploadPost.module.css
+++ b/src/components/modules/modals/UploadPost/UploadPost.module.css
@@ -34,6 +34,8 @@
   border: 1px solid makerGray;
   border-radius: 10px;
   margin-top: 15px;
+  font-size: 20px;
+  padding-left: 7px;
 }
 
 .description_input {
